--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,16 +22,15 @@ services:
   nginx:
     image: nginx:stable-alpine
     ports:
-      - "80:8080" 
+      - "80:8080"
       - "443:443"
     volumes:
       - front:/var/www/straighthup/frontend
       - staticfiles:/var/www/straighthup/static
       - mediafiles:/var/www/straighthup/media
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      # Update these lines to point to your .pem files
-      -./Innonexus/ssl/server.straighthup.com.pem:/etc/ssl/certs/server.straighthup.com.pem:ro
-      -./Innonexus/ssl/server.straighthup.private.pem:/etc/ssl/private/server.straighthup.private.pem:ro
+      - ./Innonexus/ssl/server.straighthup.com.crt:/etc/ssl/certs/server.straighthup.com.crt:ro
+      - ./Innonexus/ssl/server.straighthup.private.pem:/etc/ssl/private/server.straighthup.private.pem:ro
     depends_on:
       - frontend
       - web
