--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - staticfiles:/var/www/straighthup/static
       - mediafiles:/var/www/straighthup/media
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./Innonexus/ssl/server.straighthup.com.crt:/etc/pki/tls/cert.pem:ro
+      - ./Innonexus/ssl/server.straighthup.com.pem:/etc/pki/tls/cert.pem:ro
       - ./Innonexus/ssl/server.straighthup.private.pem:/etc/ssl/private/ftpd-rsa-key.pem:ro
     depends_on:
       - frontend
