--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,15 +22,15 @@ services:
   nginx:
     image: nginx:stable-alpine
     ports:
-      - "80:8080"
+      - "80:80"
       - "443:443"
     volumes:
       - front:/var/www/straighthup/frontend
       - staticfiles:/var/www/straighthup/static
       - mediafiles:/var/www/straighthup/media
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./Innonexus/ssl/server.straighthup.com.crt:/etc/pki/tls/certs/server.straighthup.com.crt:ro
-      - ./Innonexus/ssl/server.straighthup.com.key:/etc/ssl/private/server.straighthup.com.key:ro
+      - /etc/letsencrypt/live/straighthup.com/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
+      - /etc/letsencrypt/live/straighthup.com/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
     depends_on:
       - frontend
       - web
