--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen 8081;
+    listen 80;
     server_name straighthup.com www.straighthup.com localhost;
     return 301 https://$host$request_uri;
 }
@@ -9,8 +9,8 @@ server {
     server_name straighthup.com www.straighthup.com localhost;
 
     # Update these paths to point to your .pem files
-    ssl_certificate /etc/pki/tls/certs/server.straighthup.com.crt;  # Use the full chain if necessary
-    ssl_certificate_key /etc/ssl/private/server.straighthup.com.key;
+    ssl_certificate /etc/letsencrypt/live/straighthup.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/straighthup.com/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384';
