--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,8 +9,9 @@ server {
     server_name straighthup.com www.straighthup.com localhost;
 
     # Update these paths to point to your .pem files
-    ssl_certificate /etc/letsencrypt/live/straighthup.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/straighthup.com/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+
     
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384';
